// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool contracts > fab-archive-scan contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": true,
    "title": "Scan event ledger for archive candidates (deterministic)",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "correlation_id": {
        "description": "Optional caller-provided correlation id for Event Ledger records.",
        "type": "string",
      },
      "now_ms": {
        "description": "Override for the anti-loop cooldown clock (testing). Defaults to Date.now().",
        "minimum": 0,
        "type": "integer",
      },
      "range": {
        "anyOf": [
          {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
          {
            "const": "all",
            "type": "string",
          },
        ],
        "description": "Phase 0 scope: explicit session_id[] to constrain the scan, or the 'all' sentinel. Omitted = scan everything since the last knowledge_proposed anchor.",
      },
      "session_id": {
        "description": "Current client session id; recorded for cross-session debt tracking.",
        "type": "string",
      },
    },
    "type": "object",
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "already_proposed_keys": {
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "anchor_ts": {
        "type": [
          "number",
          "null",
        ],
      },
      "covered_through_ts": {
        "type": [
          "number",
          "null",
        ],
      },
      "dropped": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "reason": {
              "enum": [
                "user_dismissed",
                "cooldown",
                "no_new_signal",
              ],
              "type": "string",
            },
            "session_id": {
              "type": "string",
            },
          },
          "required": [
            "session_id",
            "reason",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "session_ids": {
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "warnings": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "action_hint": {
              "type": "string",
            },
            "code": {
              "type": "string",
            },
            "file": {
              "type": "string",
            },
            "line": {
              "type": "number",
            },
            "message": {
              "type": "string",
            },
          },
          "required": [
            "code",
            "file",
            "action_hint",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "anchor_ts",
      "session_ids",
      "dropped",
      "covered_through_ts",
      "already_proposed_keys",
    ],
    "type": "object",
  },
}
`;

exports[`tool contracts > fab-extract-knowledge contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": false,
    "title": "Extract pending knowledge entry",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "audience": {
        "description": "WHO this entry is for — an open scope coordinate (personal | team | project:x | org:y...). The sole author-facing audience field; the engine derives layer/visibility_store/store from it + the physical write store. Omit to default to project:<active> (bound repo) or team.",
        "pattern": "^[a-z0-9_-]+(:[a-z0-9_-]+)*$",
        "type": "string",
      },
      "evidence_paths": {
        "description": "Workspace-relative paths the agent CONSULTED (read but never modified) while building this knowledge. Documents context without affecting activation. Lifted from the legacy body ## Evidence markdown block into structured frontmatter so plan-context retrieval can read it as data.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "impact": {
        "description": "Consequences of ignoring this rule, used by the LLM to weight relevance vs cost. Each item ≤120 chars (e.g. 'O(n²) re-render on every frame', 'silent data loss on collision'). Optional — omit when impact is not observable.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "intent_clues": {
        "description": "Short LLM-readable triggers describing when this rule should fire and when it should not. Each item ≤80 chars, imperative phrasing (e.g. 'when editing Cocos UI batch code', 'NOT for non-batch contexts'). Optional — omit when the skill cannot infer cleanly.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "must_read_if": {
        "description": "One-line strong trigger; when this condition holds the entry is considered required reading. Single line ≤160 chars (e.g. 'touching anything under packages/cli/src/commands/hooks.ts'). Optional — omit when no single strong trigger fits.",
        "type": "string",
      },
      "onboard_slot": {
        "description": "Optional slot tag from the S5 onboarding set (tech-stack-decision / architecture-pattern / code-style-tone / build-system-idiom / domain-vocabulary); lets fabric-archive's first-run phase claim a project-tone slot. Skill propose-time only; never required.",
        "enum": [
          "tech-stack-decision",
          "architecture-pattern",
          "code-style-tone",
          "build-system-idiom",
          "domain-vocabulary",
        ],
        "type": "string",
      },
      "paths": {
        "description": "Relevance anchors (workspace-relative globs/paths). Non-empty → narrow (surface only on matching edits); empty/omitted → broad (always surface). The engine derives relevance_scope from this — there is no separate scope flag.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "proposed_reason": {
        "description": "Why this entry is being proposed. Drives \`## Why proposed\` rendering and enables future maturity-promotion scoring.",
        "enum": [
          "explicit-user-mark",
          "diagnostic-then-fix",
          "decision-confirmation",
          "wrong-turn-revert",
          "new-dependency-or-pattern",
          "dismissal-with-reason",
        ],
        "type": "string",
      },
      "recent_paths": {
        "description": "Workspace paths recently touched in the source session — used as scope hints",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "session_context": {
        "description": "3-5 line markdown blob — session goal + key turning point. Reviewed by future-self without transcript access.",
        "minLength": 20,
        "type": "string",
      },
      "slug": {
        "description": "URL-safe short identifier proposed by the Skill; server may sanitize",
        "type": "string",
      },
      "source_sessions": {
        "description": "Originating session ids (REQUIRED, non-empty array); correlates with Event Ledger records. Array form (T5+, rc.23 made it the sole accepted shape).",
        "items": {
          "minLength": 1,
          "type": "string",
        },
        "minItems": 1,
        "type": "array",
      },
      "tags": {
        "description": "Optional topic tags (2-4 kebab-case strings recommended). Drives cross-entry retrieval + topic clustering. Skill-inferred from session content; omit when not confidently inferable. Empty array allowed but discouraged (degrades narrow hint topic signal).",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "tech_stack": {
        "description": "DEPRECATED (v-next grill D2): new writes merge tech_stack values into tags. Field retained for backward-compatible parsing of existing entries. Was: tech stack / languages / frameworks the rule applies to.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "type": {
        "description": "Knowledge type bucket (plural form, mirrors directory layout)",
        "enum": [
          "decisions",
          "pitfalls",
          "guidelines",
          "models",
          "processes",
        ],
        "type": "string",
      },
      "user_messages_summary": {
        "description": "Skill-side summary of the user's intent/messages, kept compact",
        "type": "string",
      },
    },
    "required": [
      "source_sessions",
      "recent_paths",
      "user_messages_summary",
      "type",
      "slug",
      "proposed_reason",
      "session_context",
    ],
    "type": "object",
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "idempotency_key": {
        "description": "Stable key derived from inputs; identical inputs yield identical key",
        "type": "string",
      },
      "pending_path": {
        "description": "Workspace-relative path to the persisted pending entry",
        "type": "string",
      },
      "warnings": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "action_hint": {
              "type": "string",
            },
            "code": {
              "type": "string",
            },
            "file": {
              "type": "string",
            },
            "line": {
              "type": "number",
            },
            "message": {
              "type": "string",
            },
          },
          "required": [
            "code",
            "file",
            "action_hint",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "pending_path",
      "idempotency_key",
    ],
    "type": "object",
  },
}
`;

exports[`tool contracts > fab-pending contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": true,
    "title": "Browse and search pending knowledge entries",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "anyOf": [
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "list",
            "type": "string",
          },
          "filters": {
            "additionalProperties": false,
            "properties": {
              "created_after": {
                "format": "date-time",
                "type": "string",
              },
              "include_body": {
                "type": "boolean",
              },
              "include_deferred": {
                "type": "boolean",
              },
              "include_rejected": {
                "type": "boolean",
              },
              "layer": {
                "enum": [
                  "team",
                  "personal",
                  "both",
                ],
                "type": "string",
              },
              "maturity": {
                "enum": [
                  "draft",
                  "verified",
                  "proven",
                ],
                "type": "string",
              },
              "tags": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "type": {
                "enum": [
                  "decisions",
                  "pitfalls",
                  "guidelines",
                  "models",
                  "processes",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "required": [
          "action",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "search",
            "type": "string",
          },
          "filters": {
            "$ref": "#/anyOf/0/properties/filters",
          },
          "query": {
            "anyOf": [
              {
                "minLength": 1,
                "type": "string",
              },
              {
                "items": {
                  "minLength": 1,
                  "type": "string",
                },
                "minItems": 1,
                "type": "array",
              },
            ],
          },
        },
        "required": [
          "action",
          "query",
        ],
        "type": "object",
      },
    ],
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "anyOf": [
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "list",
            "type": "string",
          },
          "items": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "body": {
                  "type": "string",
                },
                "deferred_until": {
                  "format": "date-time",
                  "type": "string",
                },
                "layer": {
                  "enum": [
                    "team",
                    "personal",
                  ],
                  "type": "string",
                },
                "maturity": {
                  "enum": [
                    "draft",
                    "verified",
                    "proven",
                  ],
                  "type": "string",
                },
                "origin": {
                  "enum": [
                    "team",
                    "personal",
                  ],
                  "type": "string",
                },
                "pending_path": {
                  "type": "string",
                },
                "pending_path_absolute": {
                  "type": "string",
                },
                "proposed_reason": {
                  "type": "string",
                },
                "status": {
                  "enum": [
                    "active",
                    "rejected",
                    "deferred",
                  ],
                  "type": "string",
                },
                "summary": {
                  "type": "string",
                },
                "tags": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "title": {
                  "type": "string",
                },
                "type": {
                  "enum": [
                    "decisions",
                    "pitfalls",
                    "guidelines",
                    "models",
                    "processes",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "type",
                "layer",
                "maturity",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "action_hint": {
                  "type": "string",
                },
                "code": {
                  "type": "string",
                },
                "file": {
                  "type": "string",
                },
                "line": {
                  "type": "number",
                },
                "message": {
                  "type": "string",
                },
              },
              "required": [
                "code",
                "file",
                "action_hint",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "items",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "search",
            "type": "string",
          },
          "items": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "area": {
                  "enum": [
                    "pending",
                    "canonical",
                  ],
                  "type": "string",
                },
                "body": {
                  "type": "string",
                },
                "deferred_until": {
                  "format": "date-time",
                  "type": "string",
                },
                "layer": {
                  "enum": [
                    "team",
                    "personal",
                  ],
                  "type": "string",
                },
                "maturity": {
                  "enum": [
                    "draft",
                    "verified",
                    "proven",
                  ],
                  "type": "string",
                },
                "origin": {
                  "enum": [
                    "team",
                    "personal",
                  ],
                  "type": "string",
                },
                "path": {
                  "type": "string",
                },
                "path_absolute": {
                  "type": "string",
                },
                "stable_id": {
                  "type": "string",
                },
                "status": {
                  "enum": [
                    "active",
                    "rejected",
                    "deferred",
                  ],
                  "type": "string",
                },
                "summary": {
                  "type": "string",
                },
                "tags": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "title": {
                  "type": "string",
                },
                "type": {
                  "enum": [
                    "decisions",
                    "pitfalls",
                    "guidelines",
                    "models",
                    "processes",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "area",
                "path",
                "type",
                "layer",
                "maturity",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "items",
        ],
        "type": "object",
      },
    ],
  },
}
`;

exports[`tool contracts > fab-recall contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": true,
    "title": "Recall Fabric knowledge (one-call)",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "client_hash": {
        "description": "Revision hash from a prior call; enables stale detection.",
        "type": "string",
      },
      "correlation_id": {
        "description": "Optional caller-provided correlation id for Event Ledger records.",
        "type": "string",
      },
      "detected_entities": {
        "additionalProperties": {
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "description": "Optional path-keyed detected entities.",
        "type": "object",
      },
      "ids": {
        "description": "Optional explicit stable_ids to SCOPE the returned read paths. When omitted, \`paths\` carries one read path per surfaced candidate. The candidate DESCRIPTION index is always returned in full for discovery — \`ids\` only narrows which read paths are surfaced (e.g. when you already know which entries to Read). Stale ids are redirect-rewritten before matching.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "include_related": {
        "description": "When true, also surface the one-hop \`related\` graph neighbours (of the surfaced entries) that are present in the candidate set — their descriptions and read paths, NOT their bodies.",
        "type": "boolean",
      },
      "include_score_breakdown": {
        "description": "When true, populate \`entry.score_breakdown\` (numbers-only signal decomposition — bm25/vector/salience/recency/locality/proximity/credibility → final). Off by default for wire efficiency. Enable when debugging ranking or tuning scoring weights.",
        "type": "boolean",
      },
      "intent": {
        "description": "User-stated requirement or implementation intent; used to build a neutral requirement profile.",
        "type": "string",
      },
      "known_tech": {
        "description": "Known technologies involved.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "layer_filter": {
        "description": "Restrict recall to the named layer. Default: fabric-config.default_layer_filter.",
        "enum": [
          "team",
          "personal",
          "both",
        ],
        "type": "string",
      },
      "paths": {
        "description": "Candidate file paths to recall Fabric knowledge entries for. Same semantics as fab_plan_context.paths.",
        "items": {
          "type": "string",
        },
        "minItems": 1,
        "type": "array",
      },
      "session_id": {
        "description": "Current client session id (Claude Code: $session_id; Codex: corresponding identifier). Enables cross-session debt tracking. Falls back gracefully if omitted.",
        "type": "string",
      },
      "target_paths": {
        "description": "Path context for narrow-scope relevance filtering. Defaults to \`paths\`; empty = no filter.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
    },
    "required": [
      "paths",
    ],
    "type": "object",
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "auto_healed": {
        "type": "boolean",
      },
      "dropped_ids": {
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "dropped_reasons": {
        "additionalProperties": false,
        "properties": {
          "payload_budget": {
            "minimum": 0,
            "type": "integer",
          },
          "retrieval_budget": {
            "minimum": 0,
            "type": "integer",
          },
        },
        "type": "object",
      },
      "entries": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "body_in_context": {
              "type": "boolean",
            },
            "description": {
              "additionalProperties": false,
              "properties": {
                "impact": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "knowledge_type": {
                  "enum": [
                    "models",
                    "decisions",
                    "guidelines",
                    "pitfalls",
                    "processes",
                  ],
                  "type": "string",
                },
                "must_read_if": {
                  "type": "string",
                },
                "summary": {
                  "type": "string",
                },
              },
              "required": [
                "summary",
              ],
              "type": "object",
            },
            "read_path": {
              "type": "string",
            },
            "score_breakdown": {
              "additionalProperties": false,
              "properties": {
                "bm25": {
                  "type": "number",
                },
                "bm25_rank": {
                  "type": "number",
                },
                "credibility": {
                  "type": "number",
                },
                "final": {
                  "type": "number",
                },
                "locality": {
                  "type": "number",
                },
                "proximity": {
                  "type": "number",
                },
                "recency": {
                  "type": "number",
                },
                "salience": {
                  "type": "number",
                },
                "vector": {
                  "type": "number",
                },
                "vector_rank": {
                  "type": "number",
                },
              },
              "required": [
                "final",
                "salience",
                "recency",
                "locality",
                "proximity",
              ],
              "type": "object",
            },
            "stable_id": {
              "type": "string",
            },
            "store_alias": {
              "type": "string",
            },
          },
          "required": [
            "stable_id",
            "description",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "next_steps": {
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "preflight_diagnostics": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "code": {
              "enum": [
                "missing_description",
                "empty_shell_suppressed",
              ],
              "type": "string",
            },
            "message": {
              "type": "string",
            },
            "path": {
              "type": "string",
            },
            "severity": {
              "const": "warn",
              "type": "string",
            },
            "stable_ids": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
          },
          "required": [
            "code",
            "severity",
            "message",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "previous_revision_hash": {
        "type": "string",
      },
      "redirects": {
        "additionalProperties": {
          "type": "string",
        },
        "type": "object",
      },
      "related_appended": {
        "additionalProperties": {
          "type": "string",
        },
        "type": "object",
      },
      "revision_hash": {
        "type": "string",
      },
      "warnings": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "action_hint": {
              "type": "string",
            },
            "code": {
              "type": "string",
            },
            "file": {
              "type": "string",
            },
            "line": {
              "type": "number",
            },
            "message": {
              "type": "string",
            },
          },
          "required": [
            "code",
            "file",
            "action_hint",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "revision_hash",
      "entries",
    ],
    "type": "object",
  },
}
`;

exports[`tool contracts > fab-review contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": false,
    "openWorldHint": false,
    "readOnlyHint": false,
    "title": "Review pending knowledge entries",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "anyOf": [
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "approve",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "action",
          "pending_paths",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "reject",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
          "reason": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_paths",
          "reason",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify",
            "type": "string",
          },
          "changes": {
            "additionalProperties": false,
            "properties": {
              "evidence_paths": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "impact": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "intent_clues": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "layer": {
                "enum": [
                  "team",
                  "personal",
                ],
                "type": "string",
              },
              "maturity": {
                "enum": [
                  "draft",
                  "verified",
                  "proven",
                ],
                "type": "string",
              },
              "must_read_if": {
                "type": "string",
              },
              "onboard_slot": {
                "enum": [
                  "tech-stack-decision",
                  "architecture-pattern",
                  "code-style-tone",
                  "build-system-idiom",
                  "domain-vocabulary",
                ],
                "type": "string",
              },
              "related": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "relevance_paths": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "relevance_scope": {
                "enum": [
                  "narrow",
                  "broad",
                ],
                "type": "string",
              },
              "semantic_scope": {
                "pattern": "^[a-z0-9_-]+(:[a-z0-9_-]+)*$",
                "type": "string",
              },
              "summary": {
                "type": "string",
              },
              "tags": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "tech_stack": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "title": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "pending_path": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_path",
          "changes",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify-content",
            "type": "string",
          },
          "changes": {
            "$ref": "#/anyOf/2/properties/changes",
          },
          "pending_path": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_path",
          "changes",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify-layer",
            "type": "string",
          },
          "changes": {
            "additionalProperties": false,
            "properties": {
              "evidence_paths": {
                "$ref": "#/anyOf/2/properties/changes/properties/evidence_paths",
              },
              "impact": {
                "$ref": "#/anyOf/2/properties/changes/properties/impact",
              },
              "intent_clues": {
                "$ref": "#/anyOf/2/properties/changes/properties/intent_clues",
              },
              "layer": {
                "enum": [
                  "team",
                  "personal",
                ],
                "type": "string",
              },
              "maturity": {
                "$ref": "#/anyOf/2/properties/changes/properties/maturity",
              },
              "must_read_if": {
                "$ref": "#/anyOf/2/properties/changes/properties/must_read_if",
              },
              "onboard_slot": {
                "$ref": "#/anyOf/2/properties/changes/properties/onboard_slot",
              },
              "related": {
                "$ref": "#/anyOf/2/properties/changes/properties/related",
              },
              "relevance_paths": {
                "$ref": "#/anyOf/2/properties/changes/properties/relevance_paths",
              },
              "relevance_scope": {
                "$ref": "#/anyOf/2/properties/changes/properties/relevance_scope",
              },
              "semantic_scope": {
                "$ref": "#/anyOf/2/properties/changes/properties/semantic_scope",
              },
              "summary": {
                "$ref": "#/anyOf/2/properties/changes/properties/summary",
              },
              "tags": {
                "$ref": "#/anyOf/2/properties/changes/properties/tags",
              },
              "tech_stack": {
                "$ref": "#/anyOf/2/properties/changes/properties/tech_stack",
              },
              "title": {
                "$ref": "#/anyOf/2/properties/changes/properties/title",
              },
            },
            "required": [
              "layer",
            ],
            "type": "object",
          },
          "pending_path": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_path",
          "changes",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify-content-batch",
            "type": "string",
          },
          "items": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "changes": {
                  "$ref": "#/anyOf/2/properties/changes",
                },
                "pending_path": {
                  "minLength": 1,
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "changes",
              ],
              "type": "object",
            },
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "action",
          "items",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "defer",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
          "reason": {
            "type": "string",
          },
          "until": {
            "format": "date-time",
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_paths",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "retire",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
          "reason": {
            "type": "string",
          },
          "superseded_by": {
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_paths",
        ],
        "type": "object",
      },
    ],
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "anyOf": [
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "approve",
            "type": "string",
          },
          "approved": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "pending_path": {
                  "type": "string",
                },
                "stable_id": {
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "stable_id",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "failed": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "pending_path": {
                  "type": "string",
                },
                "reason": {
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "reason",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "action_hint": {
                  "type": "string",
                },
                "code": {
                  "type": "string",
                },
                "file": {
                  "type": "string",
                },
                "line": {
                  "type": "number",
                },
                "message": {
                  "type": "string",
                },
              },
              "required": [
                "code",
                "file",
                "action_hint",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "approved",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "reject",
            "type": "string",
          },
          "rejected": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "rejected",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify",
            "type": "string",
          },
          "new_stable_id": {
            "type": "string",
          },
          "pending_path": {
            "type": "string",
          },
          "prior_stable_id": {
            "type": "string",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "pending_path",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify-content-batch",
            "type": "string",
          },
          "modified": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "error": {
                  "type": "string",
                },
                "ok": {
                  "type": "boolean",
                },
                "pending_path": {
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "ok",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "modified",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "defer",
            "type": "string",
          },
          "deferred": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "deferred",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "retire",
            "type": "string",
          },
          "failed": {
            "items": {
              "$ref": "#/anyOf/0/properties/failed/items",
            },
            "type": "array",
          },
          "retired": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "path": {
                  "type": "string",
                },
                "stable_id": {
                  "type": "string",
                },
                "superseded_by": {
                  "type": "string",
                },
              },
              "required": [
                "path",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "retired",
        ],
        "type": "object",
      },
    ],
  },
}
`;
